resolving comments